# phylum-ci

./: .dockerignore  .gitattributes  .phylum_project  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .yamllint  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.ci  Dockerfile.slim  LICENSE  README.md  delme.txt  entrypoint.sh  pyproject.toml  tox.ini
.github/: dependabot.yml  pull_request_template.md  release.yml  semantic.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  task-issue-template.md  task-or-chore.md
.github/workflows/: auto_updates.yml  docker.yml  issues.yml  phylum_analyze_pr.yml  poetry_update.yml  preview.yml  release.yml  test.yml
docs/: github_actions.md  gitlab_ci.md  integrations_overview.md  release_process.md  script_options.md  security.md
docs/integrations/: azure_pipelines.md  bitbucket_pipelines.md  git_precommit.md  github_actions.md  gitlab_ci.md  jenkins.md
docs/sync/: README.txt  azure_pipelines.md  bitbucket_pipelines.md  git_precommit.md  github_actions.md  gitlab_ci.md  integrations_overview.md
scripts/: docker_tests.sh
src/phylum/: __init__.py  __main__.py  cli.py  common.py  console.py  constants.py  exceptions.py  github.py  logger.py
src/phylum/ci/: __init__.py  __main__.py  base.py  ci_azure.py  ci_base.py  ci_bitbucket.py  ci_github.py  ci_gitlab.py  ci_jenkins.py  ci_none.py  ci_precommit.py  cli.py  common.py  constants.py  depfile.py  git.py  gitlab.py  lockfile.py  manifest.py
src/phylum/exts/: __init__.py
src/phylum/exts/ci/: PhylumExt.toml  __init__.py  main.ts
src/phylum/init/: __init__.py  __main__.py  cli.py  sig.py
src/phylum/install/: __init__.py  __main__.py  cli.py
src/phylum_ci/: __init__.py  __main__.py  cli.py
templates/: .CHANGELOG_historic.md  .changes.j2  .macros.j2  .release_notes.md.j2  CHANGELOG.md.j2
tests/: __init__.py  conftest.py  constants.py  test_cli.py  test_package_metadata.py  test_phylum_ci.py  test_project_metadata.py
tests/functional/: __init__.py  test_ci.py  test_init.py  test_install.py
tests/unit/: __init__.py  test_depfile_parse.py  test_depfileentry.py  test_git.py  test_lockfile_parse.py  test_lockfileentry.py  test_logger.py  test_package_metadata.py  test_sig.py
